# python-meetup-group-2022-10-12

./: README.md  pyproject.toml
backend02/: api.http  dbsession.py  deps.py  main.py
backend03/: api.http  dbsession.py  main.py
backend03/routers/: users.py
backend04/: api.http  dbsession.py  deps.py  main.py
backend04/routers/: users.py
