[tool.poetry]
name = "fastapi_poc"
version = "0.1.0"
description = ""
authors = ["Anthony Leotta <tony@leotta.com>"]

[tool.poetry.dependencies]
python = "==3.10.5"
fastapi = "^0.85.0"
uvicorn = {extras = ["standard"], version = "^0.18.3"}
aiosqlite = "^0.17.0"

[tool.poetry.dev-dependencies]
flake8 = "^5.0.4"
autopep8 = "^1.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
